# psql-migrate

./: TODO  psql-migrate.cabal
src/Attic/Database/PostgreSQL/Simple/Migrate/Internal/: Apply.hs  QQ.hs
src/Database/PostgreSQL/Simple/: Migrate.hs
src/Database/PostgreSQL/Simple/Migrate/: Apply.hs  Check.hs
src/Database/PostgreSQL/Simple/Migrate/Internal/: Error.hs  Finger.hs  Graph.hs  Memo.hs  Mig.hs  Ops.hs  Opt.hs  Order.hs  QQ.hs  Schema.hs  Types.hs  Valid.hs
temp/psql-migrate/: psql-migrate.cabal
test/: Live.hs  LiveUtils.hs  Main.hs  Spec.hs  Tests.hs
