cabal-version:      3.8
name:               psql-migrate
version:            0.1.0.0
synopsis:           Short description of your package
description:
  Please see the README at <url>
category:           <category>
author:             <author>
maintainer:         <email>
copyright:          <author> 2025
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: <url>

Flag Devel
  Description:      Turn on warnings and turn off optimization
  Default:          False

common share
  build-depends:    base >=4.17 && <5
  default-language: GHC2021

library
  import:          share
  exposed-modules:  Database.PostgreSQL.Simple.Migrate
                    , Database.PostgreSQL.Simple.Migrate.Internal.Graph
                    , Database.PostgreSQL.Simple.Migrate.Internal.Memo
                    , Database.PostgreSQL.Simple.Migrate.Internal.Mig
  hs-source-dirs:   src
  if flag(devel)
    ghc-options:    -O0
                    -Weverything
                    -Werror
                    -Wno-all-missed-specialisations
                    -Wno-implicit-prelude
                    -Wno-missing-safe-haskell-mode
                    -Wno-prepositive-qualified-module
                    -Wno-safe
                    -Wno-unsafe
                    -Wno-missed-specialisations
  else
    ghc-options:    -O2
  build-depends:    base >=4.7 && <5
                    , containers
                    , deepseq
                    , mtl
                    , postgresql-simple
                    , text

test-suite psql-migrate-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Tests
  hs-source-dirs:   test
  ghc-options:      -Wall
                    -Werror
                    -O1
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , aeson
      , psql-migrate
      , QuickCheck
      , sydtest
  default-language: Haskell2010

