cabal-version:      3.0
name:               psql-migrate
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brian Hurt
maintainer:         bhurt42@gmail.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files: 
-- extra-source-files:

Flag Devel
  Description:      Turn on warnings and turn off optimization
  Default:          False

common share
  build-depends:    base >=4.17 && <5
  default-language: GHC2021

library
  import:          share
  exposed-modules:  Database.PostgreSQL.Simple.Migrate
                    , Database.PostgreSQL.Simple.Migrate.Apply
                    , Database.PostgreSQL.Simple.Migrate.Check
                    , Database.PostgreSQL.Simple.Migrate.Internal.Mig
                    , Database.PostgreSQL.Simple.Migrate.Internal.Schema
                    , Database.PostgreSQL.Simple.Migrate.Internal.Valid
                    , Database.PostgreSQL.Simple.Migrate.Internal.Ops
  hs-source-dirs:   src
  if flag(devel)
    ghc-options:    -O0
                    -Weverything
                    -Werror
                    -Wno-all-missed-specialisations
                    -Wno-implicit-prelude
                    -Wno-missing-safe-haskell-mode
                    -Wno-prepositive-qualified-module
                    -Wno-safe
                    -Wno-unsafe
                    -Wno-missed-specialisations
  else
    ghc-options:    -O2
  build-depends:    base >=4.7 && <5
                    , containers
                    , deepseq
                    , postgresql-simple
                    , random >= 1.3.0
                    , text

test-suite psql-migrate-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Tests
  hs-source-dirs:   test
  ghc-options:      -Wall
                    -Werror
                    -O1
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , psql-migrate
      , hspec
  default-language: Haskell2010

